--- a/src/Components/Home/style.css
+++ b/src/Components/Home/style.css
@@ -9,7 +9,7 @@
 .Home{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
 }
 
 .Home>h1{
